/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax="proto3";

package com.dremio.service.coordinator.proto;
option java_package = "com.dremio.service.coordinator.proto";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "ProjectConfigProto";

message AwsKeys {
  string access_key = 1;
  string secret_key = 2;
}

message AwsRole {
  string iam_role = 1;
  string external_id = 2;
}

message AzureClientAccess {
  string token_endpoint = 1;
  string client_id = 2;
  string client_secret = 3;
  string account_name = 4;
  string account_kind = 5;
}

message AzureSharedAccessKey {
  string access_key = 1;
  string account_name = 2;
  string account_kind = 3;
}

message DataCredentials {
  oneof credentials {
    AwsKeys keys = 1;
    AwsRole data_role = 2;
    AzureClientAccess client_access = 3;
    AzureSharedAccessKey shared_access_key = 4;
  }
}

message DistStoreConfig {
  string path = 1;
}

message ProjectConfig {
  DistStoreConfig dist_store_config = 1;
  string org_id = 2;
  DataCredentials data_credentials = 3;
}

